fix dash-line on firefox, @xp

--- a/web/static/web/scss/0.base.scss
+++ b/web/static/web/scss/0.base.scss
@@ -63,6 +63,7 @@ mark {
 
       span {
         position: absolute;
+        top: 0;
         left: 0; right: 0;
         height: 78%;
 
